# vchain-demo

./: .gitmodules  CITATION.bib  Cargo.toml  README.md
benches/: fixed_base_pow.rs  points_mul_sum.rs
src/: digest.rs  lib.rs  set.rs
src/acc/: digest_set.rs  mod.rs  serde_impl.rs  utils.rs
src/chain/: build.rs  historical_query.rs  index.rs  mod.rs  object.rs  query.rs  query_result.rs  sim_chain.rs  tests.rs  utils.rs
vchain/: Cargo.toml
vchain-exonum/: Cargo.toml
vchain-exonum/src/: api.rs  contracts.rs  lib.rs  schema.rs  service.rs  tests.rs  transactions.rs
vchain-exonum/src/proto/: mod.rs  service.proto
vchain-simchain/: Cargo.toml
vchain-simchain/src/: lib.rs
vchain/benches/: fixed_base_pow.rs  points_mul_sum.rs
vchain/src/: digest.rs  lib.rs  set.rs
vchain/src/acc/: digest_set.rs  mod.rs  serde_impl.rs  utils.rs
vchain/src/chain/: build.rs  historical_query.rs  index.rs  mod.rs  object.rs  query_result.rs  tests.rs  utils.rs
