[package]
name = "vchain"
version = "0.1.0"
authors = ["Cheng XU <rust@xuc.me>"]
edition = "2018"
publish = false

[[bench]]
name = "fixed_base_pow"
harness = false

[[bench]]
name = "points_mul_sum"
harness = false

[dependencies]
actix-cors = "0.2"
actix-rt = "1.0"
actix-web = "2.0"
algebra = { git = "https://github.com/scipr-lab/zexe/", rev = "a6f6f1dcef038d2c21366883637940339a2a97bf" }
anyhow = "1.0"
bincode = "1.2"
blake2b_simd = "0.5"
env_logger = "0.7"
ff-fft = { git = "https://github.com/scipr-lab/zexe/", rev = "a6f6f1dcef038d2c21366883637940339a2a97bf" }
futures = "0.3"
hex = "0.4"
howlong = "0.1"
itertools = "0.8"
lazy_static = "1.4"
log = "0.4"
rand = "0.7"
rayon = "1.3"
rocksdb = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = { version = "1.1", features = ["serde"] }
structopt = "0.3"

[dev-dependencies]
criterion = "0.3"

