[package]
name = "vchain-exonum"
version = "0.1.0"
authors = ["Cheng XU <rust@xuc.me>"]
edition = "2018"
publish = false
build = "build.rs"

[dependencies]
actix-cors = "0.5"
actix-rt = "1.1"
actix-web = "3.3"
anyhow = "1.0"
async-trait = "0.1"
bincode = "1.3"
env_logger = "0.8"
exonum = "0.13.0-rc.2"
exonum-crypto = "0.13.0-rc.2"
exonum-derive = "0.13.0-rc.2"
exonum-merkledb = "0.13.0-rc.2"
exonum-proto = "0.13.0-rc.2"
failure = "0.1"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
lru = "0.6"
os_info = "=1.0.1" # Fix `version_regex` does not live long enough
protobuf = "2.19"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.3"
vchain = { path = "../vchain" }

[dev-dependencies]
exonum-testkit = "0.13.0-rc.2"

[build-dependencies]
exonum-build = "0.13.0-rc.2"
