[package]
name = "vchain-simchain"
version = "0.1.0"
authors = ["Cheng XU <rust@xuc.me>"]
edition = "2018"
publish = false

[dependencies]
actix-cors = "0.2"
actix-rt = "1.0"
actix-web = "2.0"
anyhow = "1.0"
async-trait = "0.1"
bincode = "1.2"
env_logger = "0.7"
futures = "0.3"
log = "0.4"
rocksdb = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
vchain = { path = "../vchain" }
