[package]
name = "vchain-simchain"
version = "0.1.0"
authors = ["Cheng XU <rust@xuc.me>"]
edition = "2018"
publish = false

[dependencies]
actix-cors = "0.5"
actix-rt = "1.1"
actix-web = "3.3"
anyhow = "1.0"
async-trait = "0.1"
bincode = "1.3"
env_logger = "0.8"
futures = "0.3"
log = "0.4"
rocksdb = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
vchain = { path = "../vchain" }
