[package]
name = "vchain"
version = "0.1.0"
authors = ["Cheng XU <rust@xuc.me>"]
edition = "2018"
publish = false

[[bench]]
name = "fixed_base_pow"
harness = false

[[bench]]
name = "points_mul_sum"
harness = false

[dependencies]
anyhow = "1.0"
ark-bls12-381 = "0.2"
ark-ec = { version = "0.2", features = ["parallel"] }
ark-ff = { version = "0.2", features = ["asm", "parallel"] }
ark-poly = { version = "0.2", features = ["parallel"] }
async-trait = "0.1"
bincode = "1.3"
blake2b_simd = "0.5"
futures = "0.3"
hex = "0.4"
howlong = "0.1"
itertools = "0.10"
lazy_static = "1.4"
log = "0.4"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
smallvec = { version = "1.6", features = ["serde"] }

[dev-dependencies]
actix-rt = "1.1"
criterion = "0.3"
env_logger = "0.8"
rand = "0.7"
serde_json = "1.0"
